styles: ensure tb li text wraps on mobile

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -834,6 +834,10 @@ nav a[aria-current='page'] {
     display: flow-root;
   }
 
+  .tb li > * {
+    text-wrap: wrap;
+  }
+
   .fg {
     grid-gap: 0.5rem;
   }
